<resources>
    <string name="app_name">UniDeals</string>
    <string name="login">Login</string>
    <string name="sign_in_button_label">Log In</string>
    <string name="sign_out_button_label">Log Out</string>
    <string name="failed_login_status">You failed to sign in</string>
    <string name="not_signed_in_status">You are about to log in to UniDeals</string>
    <string name="signed_in_status">You are about to log out as: \u0020</string>
    <string name="currency_pound">£</string>
    <string name="about_item">About The Item</string>
    <string name="contact_seller_button">Contact Seller</string>
    <string name="price_string">Price: \u0020</string>
    <string name="perform_search">Load Listings</string>
    <string name="app_label">UniDeals</string>
    <string name="search_hint">Search</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="algolia_app_id">L61A8UP6EM</string>
    <string name="algolia_search_api_key">f3ced0b4cc4b57d69e50bfb89740b658</string>
    <string name="enter_the_details">Tell us about what you want to sell:</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="short_desc">Short Description of Item</string>
    <string name="long_desc">A more detailed description of what you want to sell, highlighting all its features.</string>
    <string name="category">Category:</string>
    <string name="hint_resource">Category</string>
    <string-array name="categories">
        <item>Furniture</item>
        <item>Electronics</item>
        <item>Clothes</item>
        <item>Text Books</item>
        <item>Shoes</item>
        <item>Event Tickets</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_temp">TempActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="post_code">Post Code</string>
    <string name="createListingLabel">Create</string>
    <string name="take_photo">Add Photo</string>
    <string name="PhotoDescription">This is the picture of your item to sell</string>
    <string name="item_for_sale">Item for sale</string>
    <string name="product_name">Product Name</string>
    <string name="this_is_the_item_description">This is the item description</string>
    <string name="clear">Clear</string>
    <string name="picture_of_the_object">Picture of the object</string>
    <string name="listings">Listings</string>
    <string name="create_a_listing">Create a Listing</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>
