<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_grey">

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:paddingEnd="6dp"
        android:contentDescription="@string/item_for_sale"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/itemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/itemImage"
        android:hint="@string/product_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemTitle"
        android:layout_toEndOf="@+id/itemImage"
        android:hint="@string/this_is_the_item_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/itemImage"
        android:background="@android:color/darker_gray"
        android:paddingTop="6dp" />
</RelativeLayout>