<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewListingActivity">

    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/mainLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:visibility="invisible">

            <TextView
                android:id="@+id/itemName"
                style="@style/AppTheme.ProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="ItemName" />

            <TextView
                android:id="@+id/shortDesc"
                style="@style/AppTheme.BasicText"
                android:textColor="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="This is the description of the item!" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Picture of the object"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.BasicText"
                    android:text="@string/price_string"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.ProductPrice"
                    android:textStyle="bold"
                    android:text="@string/currency_pound"
                    />

                <TextView
                    android:id="@+id/itemCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    style="@style/AppTheme.ProductPrice"
                    tools:text="20.00"
                    />
            </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

            <TextView
                style="@style/AppTheme.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_item"
                android:paddingTop="10dp"/>

            <TextView
                android:id="@+id/longDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.BasicText"
                android:paddingBottom="10dp"
                />

            <Button
                android:id="@+id/contactButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="openEmailApp"
                android:paddingTop="20dp"
                android:text="@string/contact_seller_button" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>